# mygame

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
runner/: Cargo.toml  build.rs
runner/src/: board.rs  database.rs  main.rs  resources.rs  test.rs  utils.rs
runner/src/plugins/: auto_move.rs
runner/src/solve/: solver.rs  state.rs
runner/src/systems/: auto_move.rs  input.rs  level.rs  render.rs
sokoban/: Cargo.toml  README.md  rustfmt.toml
sokoban/assets/: Grigr2002_40.xsb  GrigrSpecial_40.xsb  Sasquatch_50.xsb  Sasquatch_III_50.xsb  Sasquatch_IV_50.xsb  Sasquatch_VI_50.xsb  Sasquatch_V_50.xsb  XSokoban_90.xsb
sokoban/benches/benches/: deadlock.rs  level.rs  map.rs  path_finding.rs  solver.rs  utils.rs
sokoban/src/: action.rs  actions.rs  deadlock.rs  direction.rs  error.rs  map.rs  node.rs  path_finding.rs  run_length.rs  tiles.rs
sokoban/tests/: action.rs  actions.rs  deadlock.rs  direction.rs  level.rs  map.rs  path_finding.rs  run_length.rs  solver.rs  utils.rs
soukoban/: Cargo.toml  README.md
soukoban/assets/: Aymeric_Du_Peloux_282.xsb  Grigr2001_100.xsb  Holland_81.xsb  LICENSE  Sasquatch II_50.xsb  Sasquatch_VII_50.xsb  Sven_1623.xsb  Yoshio_Murase_Autogenerated_52.xsb
soukoban/benches/: benchmark.rs
soukoban/benches/benches/: deadlock.rs  level.rs  map.rs  mod.rs  path_finding.rs  solver.rs  utils.rs
soukoban/src/: action.rs  deadlock.rs  direction.rs  level.rs  lib.rs  map.rs  run_length.rs  solver.rs  state.rs
soukoban/tests/: action.rs  actions.rs  deadlock.rs  direction.rs  level.rs  map.rs  path_finding.rs  run_length.rs  solver.rs  utils.rs
src/: alien.rs  animation.rs  ascii.rs  assets.rs  audio.rs  bird.rs  board.rs  bounds_deletion.rs  bricks.rs  bullet.rs  camera.rs  clouds.rs  colors.rs  combat.rs  common.rs  consts.rs  controls.rs  cursor_info.rs  debug.rs  enemy.rs  enemy_spawner.rs  fadeout.rs  food.rs  game.rs  game_over.rs  gamedata.rs  gamestate.rs  graphics.rs  gui.rs  gun.rs  highscore.rs  lib.rs  main.rs  menu.rs  mountains.rs  npc.rs  physics.rs  piece.rs  pieces.rs  pipes.rs  (+14 more)
src/board/: position.rs
src/demo/: animation.rs
src/game/: bird.rs  cursor.rs  game_plugin.rs  mod.rs  pipes.rs  plugin.rs  resources.rs  systems.rs  window.rs
src/game/enemy/: mod.rs  systems.rs
src/game/level/: level.rs  level_plugin.rs  mod.rs  targets.rs
src/game/math/: mod.rs
src/game/player/: camera_controller.rs  input.rs  mod.rs  movement.rs  player.rs  shooting.rs  systems.rs
src/game/score/: mod.rs
src/game/shooting/: tracer.rs
src/game/systems/: control.rs  graphics.rs  setup.rs
src/game/ui/: crosshair.rs  mod.rs  ui_plugin.rs
src/game/ui/game_over_menu/: styles.rs
src/game/ui/game_over_menu/systems/: layout.rs  updates.rs
src/game/ui/hud/: styles.rs
src/game/ui/hud/systems/: layout.rs  updates.rs
src/game/ui/pause_menu/: styles.rs
src/game/ui/pause_menu/systems/: layout.rs
src/main_menu/: styles.rs
src/main_menu/systems/: layout.rs
src/screens/: mod.rs
