[package]
name = "bevy-new-2d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[lib]
name = "bevy_new_2d_lib"
crate-type = ["rlib"]

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.9"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
