[package]
name = "sokoban-runner"
version = "0.1.3"
edition = "2021"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[dependencies]
# System clipboard
arboard = "3.4"
benimator = "4.1"
bevy = { version = "0.15", features = ["wayland"] }
bevy_kira_audio = "0.22"
bitflags = "2.6"
dirs = "6"
image = "0.25"
itertools = "0.14"
leafwing-input-manager = "0.16"
nalgebra = "0.33"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sokoban = { path = "../sokoban" }
toml = "0.8"
# The version needs to be consistent with the one used in bevy
winit = "0.30"

[build-dependencies]
fs_extra = "1.2"
